ADDED ENVIROMENTAL VARIABLES
- Added .env file for Hubspot API key

--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@ provider:
 
 functions:
   contact:
-    handler: handler.hello
+    handler: handler.getContacts
     events:
       - http:
           path: /
