--- a/serverless.yml
+++ b/serverless.yml
@@ -1,19 +1,34 @@
-
-
-service: hubspot-api #
-
+service: hubspot-api
 provider:
   name: aws
   runtime: nodejs12.x
   stage: dev
   region: us-east-1
   memorySize: 128
-
 functions:
-  contact:
-    handler: handler.getContacts
+  app:
+    handler: app/app.handler
     events:
       - http:
           path: /
           method: ANY
           cors: true
+      - http:
+          path: /{proxy+}
+          method: ANY
+          cors: true
+# provider:
+#   name: aws
+#   runtime: nodejs12.x
+#   stage: dev
+#   region: us-east-1
+#   memorySize: 128
+#
+# functions:
+#   contact:
+#     handler: handler.getContacts
+#     events:
+#       - http:
+#           path: /
+#           method: ANY
+#           cors: true
